<resources>
    <string name="app_name">TODOList</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!--    Main-->
    <string name="main_first_back_click_message">Для выхода нажмите еще раз</string>

    <!--    Auth-->
    <string name="sign_up_dest_title">Создание профиля</string>
    <string name="auth_email_hint">Электронный адрес</string>
    <string name="auth_first_name_hint">Имя</string>
    <string name="auth_second_name_hint">Фамилия</string>
    <string name="auth_password_hint">Пароль</string>
    <string name="auth_control_password_hint">Повторный ввод пароля</string>
    <string name="auth_sign_in">Войти</string>
    <string name="auth_sign_up">Создать профиль</string>
    <string name="action_sign_in_short">Войти</string>

    <!--    Profile-->
    <string name="profile_dest_title">Профиль</string>
    <string name="logout_dest_title">Выйти</string>


    <!--    Task-->
    <string name="task_list_dest_title">Задачи</string>
    <string name="task_view_dest_title">Задача</string>
    <string name="task_add_dest_title">Новая задача</string>
    <string name="task_edit_dest_title">Редактирование</string>
    <string name="profile_sign_out_label">Выход</string>
    <string name="task_add_save_action_title">Сохранить</string>

    <string name="task_add_title_hint">Заголовок задачи</string>
    <string name="task_add_description_hint">Описание задачи</string>
    <string name="task_add_btn_title">Добавить</string>
    <string name="task_save_btn_title">Сохранить</string>
    <string name="task_view_delete_action_title">Удалить</string>
    <string name="task_view_edit_action_title">Редактировать</string>
    <string name="task_view_delete_dialog_title">Удалить задачу?</string>

    <!--Common-->
    <string name="dialog_neg_button_title">Отмена</string>
    <string name="dialog_pos_button_title">Ок</string>
    <string name="profile_sign_out_dialog_title">Выйти с профиля?</string>
    <string name="task_add_backpress_dialog_title">Отменить добавление задачи?</string>
    <string name="save_menu_item_title">Сохранить</string>
    <string name="task_edit_update_dialog_title">Сохранить изменения?</string>

</resources>