<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data class="SignInViewBinding">
        <import type="android.view.View"/>
        <variable
            name="viewmodel"
            type="com.aska.development.todolist.ui.auth.signin.SignInViewModel" />
    </data>

    <RelativeLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/activity_horizontal_margin">

        <TextView
            android:id="@+id/auth_error_message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:visibility="@{viewmodel.errorMessage == null ? View.INVISIBLE: View.VISIBLE}"
            android:layout_marginTop="24dp"
            android:text="@{viewmodel.errorMessage}"
            android:textColor="@android:color/holo_red_dark"
            android:textSize="16sp" />

        <LinearLayout
            android:layout_below="@id/auth_error_message"
            android:layout_marginTop="80dp"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/auth_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/auth_email_hint"
                android:inputType="textEmailAddress"
                android:selectAllOnFocus="true"
                android:text="@={viewmodel.email}" />

            <EditText
                android:id="@+id/auth_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:hint="@string/auth_password_hint"
                android:imeActionLabel="@string/action_sign_in_short"
                android:imeOptions="actionDone"
                android:inputType="textPassword"
                android:selectAllOnFocus="true"
                android:text="@={viewmodel.password}" />

            <Button
                android:id="@+id/sign_in"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginRight="24dp"
                android:layout_marginLeft="24dp"
                android:enabled="@{viewmodel.paramValid}"
                android:onClick="@{()->viewmodel.signIn()}"
                android:text="@string/auth_sign_in"
                android:textAllCaps="false" />

            <TextView
                android:id="@+id/sign_up"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginTop="16dp"
                android:text="@string/auth_sign_up"
                android:textColor="@color/colorPrimary"
                android:textSize="16sp" />
        </LinearLayout>


        <ProgressBar
            android:id="@+id/loading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="64dp"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="64dp"
            android:indeterminate="true"
            android:layout_centerInParent="true"
            android:visibility="gone" />

    </RelativeLayout>
</layout>